<resources>
    <string name="app_name">engineering mode</string>
    <string name="thirdverinfo">third version info</string>
    <string name="verinfo">version info</string>
    <string name="layer1monitor">Layer1 Monitor</string>
    <string name="version">version</string>
    <string name="dynaengmode">Dyna Eng Mode</string>
    <string name="netinfo">Net Info</string>
    <string name="netinfotitle">NET Info</string>
    <string name="verinfotitle">Version Info</string>
    <string name="modeminfo">Modem Info</string>
    <string name="imeiinfo">IMEI</string>
    <string name="swinfo">SW version:</string>
    <string name="hwinfo">HW version:</string>
    <string name="agenttitle">UA Agent</string>
    <string name="profiletitle">UA Profile</string>
    <string name="Lock_freq1">Lock_freq1:</string>
    <string name="ua_setting">UA Setting</string>
    <string name="cur_ua">Current UA:</string>
    <string name="ua_default">Default UA</string>
    <string name="ua_mtk">MTK UA</string>
    <string name="ua_samsung">Samsung UA</string>
    <string name="ua_iphone">iPhone UA</string>
    <string name="ua_chrome">Chrome UA</string>
    <string name="ua_ie">IE UA</string>
    <string name="ua_custom">Custom UA</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="lfc1">Lock_freq1_cells:</string>
    <string name="lfc2">Lock_freq2_cells:</string>
    <string name="lfc3">Lock_freq3_cells:</string>
    <string name="lfc4">Lock_freq4_cells:</string>
    <string name="unlockfreq">unlock freq cells:</string>
    <string name="gprsdata">Data number:</string>
    <string name="gprscontent">Send content:</string>
    <string name="uplmn">UPLMN settings</string>
    <string name="uplmn_update">Refresh</string>
    <string name="upa">UPA</string>
    <string name="upasetting">UPA Setting</string>
    <string name="setting">Modify</string>
    <string name="inputvalue">Modify</string>
    <string name="uplmn_index">index (start from 0):</string>
    <string name="uplmn_id">id number:</string>
    <string name="uplmn_type">type (0:UTRAN 1:GSM):</string>
    <string name="psver1">Build version</string>
    <string name="psver2">Mocor version</string>
    <string name="imei">IMEI</string>
    <string name="read_button">Read</string>
    <string name="write_button">Write</string>
    <string name="preferred_network_mode_title">Network Mode</string>
    <string name="preferred_network_mode_summary">Change the network operating mode</string>
    <string name="preferred_network_mode_dialogtitle">Preferred network mode</string>
    <string name="sim_forbid_plmn">Sim Forbid Plmn</string>
    <string name="sim_equal_plmn">Sim Equal Plmn</string>
    <string name="set_bands_error">Set Error,Please try again after a few minutes</string>
    <string name="wifi_testing_label">Wifi test</string>
    <string name="wifi_eut_label">Wifi EUT test</string>
    <string name="wifi_starting">wifi starting...</string>
    <string name="wifi_start_scan">wifi scaning...</string>
    <string name="wifi_stopping">wifi stopping...</string>
    <string name="wifi_stopped">wifi stopped</string>
    <string name="wifi_error">open wifi failed</string>
    <string name="wifi_no_network">No Wifi Network</string>
    <string name="wifi_pass">Pass</string>
    <string name="wifi_istesting">is testing now,please wait...</string>
    <string name="wifi_isclosing_tit">close test</string>
    <string name="wifi_isclosing">test is closing,please wait...</string>
    <string name="wifi_eut_str_band">band</string>
    <string name="wifi_eut_str_channel">Channel</string>
    <string name="wifi_eut_str_sFactor">sFactor</string>
    <string name="wifi_eut_str_frequency">frequency</string>
    <string name="wifi_eut_str_frequencyOffset">frequencyOffset</string>
    <string name="wifi_eut_str_amplitude">amplitude</string>
    <string name="wifi_eut_str_rate">Rate</string>
    <string name="wifi_eut_str_powerLevel">PowerLevel</string>
    <string name="wifi_eut_str_length">length</string>
    <string name="wifi_eut_str_enablelbCsTestMode">enablelbCsTestMode</string>
    <string name="wifi_eut_str_interval">interval</string>
    <string name="wifi_eut_str_destMacAddr">destMacAddr</string>
    <string name="wifi_eut_str_preamble">preamble</string>
    <string name="wifi_eut_str_filteringEnable">filteringEnable</string>
    <string name="wifi_eut_str_cw">CW test</string>
    <string name="wifi_eut_str_rx">RX test</string>
    <string name="wifi_eut_str_tx">TX test</string>
    <string name="wifi_eut_label_cw">-------------------CW Parameters-------------------</string>
    <string name="wifi_eut_label_tx">-------------------Tx Parameters-------------------</string>
    <string name="wifi_eut_label_rx">-------------------Rx Parameters-------------------</string>
    <string name="wifi_eut_desc_channel">1-14 for 2.4Ghz,1-200 for 4.9/5Ghz</string>
    <string name="wifi_eut_desc_sFactor">Multiples of 500KHz, 8000-10000</string>
    <string name="wifi_eut_desc_frequency">0 or 1970-6000 (MHz)</string>
    <string name="wifi_eut_desc_frequencyOffset">-20000-20000 (KHz)</string>
    <string name="wifi_eut_desc_amplitude">0-16</string>
    <string name="wifi_eut_desc_rate">Mbps, rounded down to the nearest integer</string>
    <string name="wifi_eut_desc_powerLevel">1-15</string>
    <string name="wifi_eut_desc_length">0-2304</string>
    <string name="wifi_eut_desc_interval">microseconds</string>
    <string name="wifi_eut_desc_destMacAddr">Destination MAC address i.e. c89cdc5c72a2</string>
    <string name="wifi_eut_band_err1">range of band is 1-14</string>
    <string name="wifi_eut_band_err2">range of band is 1-200</string>
    <string name="wifi_eut_sFactor_err">Multiples of 500KHz, 8000-10000</string>
    <string name="wifi_eut_frequency_err">range of frequency is 1970-6000 (MHz)</string>
    <string name="wifi_eut_frequencyOffset_err">rang of frequencyOffset is -20000-20000</string>
    <string name="wifi_eut_length_err">rang of length is 0-2304</string>
    <string name="wifi_eut_init_fail">init fail</string>
    <string name="wifi_eut_init_success">init Success</string>
    <string name="wifi_eut_initing">initing...</string>
    <string name="wifi_eut_start">start</string>
    <string name="wifi_eut_stop">stop</string>
    <string name="fill_memory_alert_msg">Please wait...</string>
    <string name="fill_memory_stop_msg">Stuffing MEMORY has been deleted</string>
    <string name="fill_memory_alert_ok">Ok,I got it</string>
    <string name="memory_low">Warning:out of memory</string>
    <string name="modem_arm_log_entries_values_default">0</string>
    <string name="currentvalue">Current Value:</string>
    <string name="modem_dsp_log_entries_values_default">0</string>
    <string name="no_sim_card_prompt">Please insert USIM card and try again</string>
    <string name="choose_sub">Choose SIM</string>
    <string name="mobile_network_settings_sub_0">SIM1</string>
    <string name="mobile_network_settings_sub_1">SIM2</string>
    <string name="mobile_network_settings_other">Other</string>
    <string name="btut_test">BT EUT test</string>
    <string name="btut_tag">enter BT EUT mode，waiting...</string>
    <string name="label_slogui">SlogUI</string>
    <string name="rdo_general_on">On</string>
    <string name="rdo_general_off">Off</string>
    <string name="rdo_general_lowpower">Silent</string>
    <string name="chk_general_switch">General switch</string>
    <string name="chk_general_android">Record Android log</string>
    <string name="chk_general_modem">Record modem log</string>
    <string name="txv_general_storagelocation">Log path</string>
    <string name="rdo_general_sdcard">SDCard</string>
    <string name="rdo_general_nand">Data directory</string>
    <string name="btn_general_clearlog">Clear logs in Log path</string>
    <string name="btn_general_dump">Dump log in SD</string>
    <string name="chk_general_snapsvc">Start screenshot service</string>
    <string name="chk_general_alwaysrun">Always showing the notification in status bar</string>
    <string name="chk_general_autoclear">Save more logs in last_log</string>
    <string name="alert_request_dump_title">Request dumping log in SDCard</string>
    <string name="alert_request_dump_prompt">Need to dump logs in T-Card? Please ensure that you have chosen the SDCard in logpath.</string>
    <string name="toast_dump_filename_error">Please check your input, you can input latin-characters and numbers only.</string>
    <string name="chk_android_switch">Record Android Log</string>
    <string name="txv_android_branch">Subswitch</string>
    <string name="chk_android_kernel">Record kernel log</string>
    <string name="chk_android_system">Record system log</string>
    <string name="chk_android_main">Record main log</string>
    <string name="chk_android_radio">Record radio log</string>
    <string name="chk_modem_switch">Record modem log</string>
    <string name="chk_muti_modem_switch0">Record modem0 log</string>
    <string name="chk_muti_modem_switch1">Record modem1 log</string>
    <string name="txv_modem_other">Misc options</string>
    <string name="chk_modem_bluetooth">Record bluetooth log</string>
    <string name="chk_modem_tcp">Record tcp log</string>
    <string name="chk_modem_misc">Record misc log</string>
    <string name="txv_alert_dump">Please input package name</string>
    <string name="txv_alert_clearlog">Really clear all logs?</string>
    <string name="alert_dump_title">Dump logs</string>
    <string name="alert_dump_dialog_ok">OK</string>
    <string name="alert_dump_dialog_cancel">Cancel</string>
    <string name="alert_clear_title">Clear logs</string>
    <string name="alert_clear_dialog_ok">Delete</string>
    <string name="alert_clear_dialog_cancel">Abort</string>
    <string name="alert_clear_string">Really clear all logs?</string>
    <string name="tabtag_tabhost_tabgeneral">General</string>
    <string name="tabtag_tabhost_tabandroid">Android Log</string>
    <string name="tabtag_tabhost_tabmodem">Modem and Misc</string>
    <string name="toast_receiver_failed">Failed to start Slog service</string>
    <string name="notification_slogsvc_title">SlogUI running in background</string>
    <string name="notification_slogsvc_prompt">Press to return SlogUI</string>
    <string name="notification_slogsvc_statusbarprompt">Starting SlogUI service</string>
    <string name="notification_snapsvc_title">SlogUI screenshot service</string>
    <string name="notification_snapsvc_prompt">Press here to screenshot now</string>
    <string name="notification_snapsvc_statusbarprompt">SlogUI screenshot service has begun</string>
    <string name="progressdialog_tabhost_prompt">Please wait..</string>
    <string name="toast_snap_success">Screenshot successfully</string>
    <string name="toast_snap_failed">Failed to screenshot</string>
    <string name="toast_snap_prompt">Pull the statusbar, you\'ll find screenshot service, press it to snap the screen.</string>
    <string name="toast_service_snap_start_failed">Failed to start snap service.</string>
    <string name="toast_service_snap_end_failed">Failed to stop snap service.</string>
    <string name="toast_service_slog_start_failed">Failed to start slog service.</string>
    <string name="toast_service_slog_end_failed">Failed to stop slog service.</string>
    <string name="toast_freespace_nand">Free space in Data directory:</string>
    <string name="toast_freespace_sdcard">Free space in SDCard:</string>
    <string name="low_free_space_title">Request clean or dump logs</string>
    <string name="low_free_space_message">The free space of current logpath is low, this may effect saved logs or dumping log, please dump them or clean them in time</string>
    <string name="read_btn">Read IMEI</string>
    <string name="set_btn">Set IMEI</string>
    <string name="sim1">SIM1 IMEI</string>
    <string name="sim2">SIM2 IMEI</string>
</resources>