<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/layout_android_scrollview" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@id/linearlayout_android_main" android:layout_width="match_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/chk_android_general" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_android_switch" />
        <TextView android:paddingTop="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/txv_android_branch" />
        <CheckBox android:id="@id/chk_android_kernel" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_android_kernel" />
        <CheckBox android:id="@id/chk_android_system" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_android_system" />
        <CheckBox android:id="@id/chk_android_radio" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_android_radio" />
        <CheckBox android:id="@id/chk_android_main" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_android_main" />
    </LinearLayout>
</ScrollView>
