<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@id/layout_modem_scrollview" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@id/linearlayout_modem_main" android:layout_width="match_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/chk_modem_branch" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_modem_switch" />
        <CheckBox android:id="@id/chk_modem_branch_second" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_modem_switch" />
        <TextView android:paddingTop="40dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/txv_modem_other" />
        <CheckBox android:id="@id/chk_modem_bluetooth" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_modem_bluetooth" />
        <CheckBox android:id="@id/chk_modem_tcp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_modem_tcp" />
        <CheckBox android:id="@id/chk_modem_misc" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/chk_modem_misc" />
        <TextView android:id="@id/txv_modem_tester" android:paddingTop="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
